--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/EmailAlertProperties.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/EmailAlertProperties.form
@@ -190,7 +190,7 @@
                   </component>
                 </children>
               </grid>
-              <grid id="1529f" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="1529f" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -245,6 +245,14 @@
                     <properties>
                       <horizontalTextPosition value="10"/>
                       <text value="Server Requires Authentication"/>
+                    </properties>
+                  </component>
+                  <component id="3bef8" class="javax.swing.JCheckBox" binding="contextVarPasswordCheckBox">
+                    <constraints>
+                      <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Context variable in password"/>
                     </properties>
                   </component>
                 </children>
