SSM-2958: fixed by adding a check box to indiciate that the split pattern is a regular expression. When it's not checked the value is used literally to split the input variable. Added test coverage. See http://sarek/mediawiki/index.php?title=SplitJoinAssertion#Split_Variable.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26958 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SplitJoinAssertion/src/main/java/com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog.form
+++ b/modules/gateway/assertions/SplitJoinAssertion/src/main/java/com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.external.assertions.splitjoin.console.SplitVariablePropertiesDialog">
-  <grid id="cbd77" binding="propertyPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="cbd77" binding="propertyPanel" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="8" bottom="0" right="8"/>
     <constraints>
       <xy x="48" y="54" width="436" height="297"/>
@@ -18,7 +18,7 @@
       </component>
       <vspacer id="b72eb">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="72e52" class="javax.swing.JLabel">
@@ -61,6 +61,14 @@
           </grid>
         </constraints>
         <properties/>
+      </component>
+      <component id="9744b" class="javax.swing.JCheckBox" binding="regularExpressionCheckBox">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="com/l7tech/external/assertions/splitjoin/console/SplitVariablePropertiesDialog" key="regExCheckBox"/>
+        </properties>
       </component>
     </children>
   </grid>
