--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/LdapAdvancedConfigurationPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/LdapAdvancedConfigurationPanel.form
@@ -151,19 +151,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <labelFor value="efc1a"/>
               <text resource-bundle="com/l7tech/console/resources/IdentityProviderDialog" key="advancedConfiguration.group.hierarchyMaxAge"/>
-            </properties>
-          </component>
-          <component id="efc1a" class="javax.swing.JTextField" binding="groupCacheHierarchyMaxAgeTextField">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <horizontalAlignment value="4"/>
-              <text value=""/>
             </properties>
           </component>
           <component id="31eb7" class="javax.swing.JLabel">
@@ -198,6 +186,16 @@
             </constraints>
             <properties>
               <text resource-bundle="com/l7tech/console/resources/IdentityProviderDialog" key="advancedConfiguration.group.caseInsensitiveMembership"/>
+            </properties>
+          </component>
+          <component id="ff066" class="javax.swing.JFormattedTextField" binding="groupCacheHierarchyMaxAgeTextField">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <horizontalAlignment value="4"/>
             </properties>
           </component>
         </children>
