--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/GlobalResourcesAnalyzeDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/GlobalResourcesAnalyzeDialog.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.GlobalResourcesAnalyze">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.GlobalResourcesAnalyzeDialog">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="8" left="8" bottom="8" right="8"/>
     <constraints>
@@ -58,7 +58,7 @@
               <splitpane position="left"/>
             </constraints>
             <properties/>
-            <border type="none" title-resource-bundle="com/l7tech/console/panels/GlobalResourcesAnalyze" title-key="title.resources"/>
+            <border type="none" title-resource-bundle="com/l7tech/console/panels/GlobalResourcesAnalyzeDialog" title-key="title.resources"/>
             <children>
               <scrollpane id="41ec0">
                 <constraints>
@@ -86,7 +86,7 @@
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text resource-bundle="com/l7tech/console/panels/GlobalResourcesAnalyze" key="button.validate"/>
+                      <text resource-bundle="com/l7tech/console/panels/GlobalResourcesAnalyzeDialog" key="button.validate"/>
                     </properties>
                   </component>
                   <component id="5ba63" class="javax.swing.JButton" binding="resetButton" default-binding="true">
@@ -94,7 +94,7 @@
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text resource-bundle="com/l7tech/console/panels/GlobalResourcesAnalyze" key="button.reset"/>
+                      <text resource-bundle="com/l7tech/console/panels/GlobalResourcesAnalyzeDialog" key="button.reset"/>
                     </properties>
                   </component>
                   <vspacer id="e4a51">
@@ -107,7 +107,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text resource-bundle="com/l7tech/console/panels/GlobalResourcesAnalyze" key="button.view"/>
+                      <text resource-bundle="com/l7tech/console/panels/GlobalResourcesAnalyzeDialog" key="button.view"/>
                     </properties>
                   </component>
                 </children>
@@ -125,7 +125,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text resource-bundle="com/l7tech/console/panels/GlobalResourcesAnalyze" key="label.total-resources"/>
+                      <text resource-bundle="com/l7tech/console/panels/GlobalResourcesAnalyzeDialog" key="label.total-resources"/>
                     </properties>
                   </component>
                   <component id="13d1a" class="javax.swing.JLabel" binding="analyzedResourceCountLabel">
@@ -141,7 +141,7 @@
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text resource-bundle="com/l7tech/console/panels/GlobalResourcesAnalyze" key="label.invalid"/>
+                      <text resource-bundle="com/l7tech/console/panels/GlobalResourcesAnalyzeDialog" key="label.invalid"/>
                     </properties>
                   </component>
                   <component id="816a" class="javax.swing.JLabel" binding="validationFailureCountLabel">
