--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/GlobalResourcesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/GlobalResourcesDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="8" left="8" bottom="8" right="8"/>
     <constraints>
-      <xy x="20" y="20" width="540" height="364"/>
+      <xy x="20" y="20" width="610" height="456"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -120,7 +120,7 @@
             <children>
               <component id="60480" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="0.0" weighty="1.0"/>
                 </constraints>
                 <properties>
@@ -129,7 +129,7 @@
               </component>
               <component id="7393f" class="javax.swing.JLabel" binding="filterStatusLabel">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <minimum-size width="0" height="-1"/>
                     <preferred-size width="0" height="-1"/>
                     <maximum-size width="0" height="-1"/>
@@ -138,6 +138,32 @@
                 </constraints>
                 <properties>
                   <text resource-bundle="com/l7tech/console/panels/GlobalResourcesDialog" key="label.filter-status.none"/>
+                </properties>
+              </component>
+              <hspacer id="3720c">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="12" height="-1"/>
+                  </grid>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+              </hspacer>
+              <component id="e8b03" class="javax.swing.JLabel" binding="displayedAndTotalResourcesLabel">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="0 / 0"/>
+                </properties>
+              </component>
+              <component id="a1d06" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text resource-bundle="com/l7tech/console/panels/GlobalResourcesDialog" key="label.filtered-total"/>
                 </properties>
               </component>
             </children>
@@ -198,9 +224,9 @@
       </grid>
       <hspacer id="bbc1d">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="220" height="-1"/>
-            <preferred-size width="520" height="-1"/>
+            <preferred-size width="620" height="-1"/>
           </grid>
         </constraints>
       </hspacer>
