--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SchemaValidationPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SchemaValidationPropertiesDialog.form
@@ -300,7 +300,7 @@
                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
-                              <text value="Pick Global Schema: "/>
+                              <text value="Selected schema:"/>
                             </properties>
                           </component>
                           <component id="ce32a" class="javax.swing.JComboBox" binding="globalSchemaCombo" default-binding="true">
