--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/BuildRstrSoapResponsePropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/BuildRstrSoapResponsePropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="581" height="403"/>
+      <xy x="20" y="20" width="685" height="407"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -91,7 +91,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Include a RequestedAttachedReference element"/>
+                  <text value="Include a &lt;RequestedAttachedReference&gt; element"/>
                 </properties>
               </component>
               <component id="8e317" class="javax.swing.JCheckBox" binding="unattachedRefCheckBox">
@@ -99,7 +99,7 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Include a RequestedUnattachedReference element"/>
+                  <text value="Include a &lt;RequestedUnattachedReference&gt; element"/>
                 </properties>
               </component>
               <grid id="592ce" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -115,7 +115,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Set KeySize (bits):"/>
+                      <text value="Set key size (bits):"/>
                     </properties>
                   </component>
                   <component id="f206" class="javax.swing.JComboBox" binding="keySizeComboBox">
@@ -161,8 +161,8 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <label value="Set Lifetime for the returned security token:"/>
-                      <text value="Set Lifetime for the returned security token:"/>
+                      <label value="Set lifetime for the returned security token:"/>
+                      <text value="Set lifetime for the returned security token:"/>
                     </properties>
                   </component>
                 </children>
@@ -180,7 +180,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Include an AppliesTo element with WS-Addressing Address:"/>
+                      <text value="Include an &lt;AppliesTo&gt; element with WS-Addressing Address:"/>
                     </properties>
                   </component>
                   <component id="de26a" class="javax.swing.JTextField" binding="addressTextField">
@@ -202,7 +202,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="A response message including a result of token cancellation"/>
+              <text value="A response message that includes the result of a token cancellation"/>
             </properties>
           </component>
           <grid id="cafc2" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -219,7 +219,7 @@
                 </constraints>
                 <properties>
                   <selected value="true"/>
-                  <text value="A response message including an issued security token:"/>
+                  <text value="A response message that includes an issued security token:"/>
                 </properties>
               </component>
               <component id="dc283" class="javax.swing.JTextField" binding="tokenIssuedTextField">
