Fixed the dialog title getting overlapped by the dialog margins in the properties dialogs of "Create Security Context Token" assertion and "Cancel Security Context" assertion.  Also added a limit (128 chars) on the maximal length for the variable prefix in the "Create Security Context Token" assertion properties dialog.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27044 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/CreateSecurityContextTokenPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/CreateSecurityContextTokenPropertiesDialog.form
@@ -3,9 +3,12 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="279" height="162"/>
+      <xy x="20" y="20" width="500" height="160"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="410" height="100"/>
+      <preferredSize width="400" height="100"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="558be" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
