--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/CancelSecurityContextPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/CancelSecurityContextPropertiesDialog.form
@@ -3,9 +3,12 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="388" height="133"/>
+      <xy x="20" y="20" width="400" height="133"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="400" height="120"/>
+      <preferredSize width="400" height="120"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="dbda9" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
