--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/JmsQueuePropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/JmsQueuePropertiesDialog.form
@@ -89,7 +89,7 @@
                     <properties>
                       <margin top="2" left="3" bottom="0" right="3"/>
                       <selected value="true"/>
-                      <text value="&amp;Outbound - Gateway can route messages to Queue"/>
+                      <text value="&amp;Outbound - Gateway can route messages to the Destination"/>
                       <toolTipText value="Select Outbound to configure an outbound queue."/>
                     </properties>
                   </component>
@@ -99,7 +99,7 @@
                     </constraints>
                     <properties>
                       <margin top="0" left="3" bottom="2" right="3"/>
-                      <text value="&amp;Inbound - Gateway will drain messages from Queue"/>
+                      <text value="&amp;Inbound - Gateway will drain messages from the Destination"/>
                       <toolTipText value="Select Inbound to configure an inbound queue."/>
                     </properties>
                   </component>
@@ -108,7 +108,7 @@
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="This &amp;queue is a template"/>
+                      <text value="This &amp;destination is a template"/>
                     </properties>
                   </component>
                 </children>
@@ -241,7 +241,7 @@
                     </constraints>
                     <properties>
                       <labelFor value="62550"/>
-                      <text value="User Name:"/>
+                      <text value="&amp;User Name:"/>
                     </properties>
                   </component>
                   <component id="62550" class="javax.swing.JTextField" binding="jndiUsernameTextField">
@@ -258,7 +258,7 @@
                     </constraints>
                     <properties>
                       <labelFor value="343e"/>
-                      <text value="Password:"/>
+                      <text value="&amp;Password:"/>
                     </properties>
                   </component>
                   <vspacer id="e78a9">
@@ -374,41 +374,24 @@
               </grid>
             </children>
           </grid>
-          <grid id="456" layout-manager="GridLayoutManager" row-count="9" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="456" layout-manager="GridLayoutManager" row-count="11" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="8" left="8" bottom="8" right="8"/>
             <constraints>
-              <tabbedpane title="Queue"/>
+              <tabbedpane title="Destination"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
               <component id="b3b51" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <labelFor value="cad58"/>
-                  <text value="Queue Connection &amp;Factory Name:"/>
-                </properties>
-              </component>
-              <component id="cad58" class="javax.swing.JTextField" binding="qcfTextField">
-                <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
-              <component id="18d6c" class="javax.swing.JLabel">
-                <constraints>
                   <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <labelFor value="288fd"/>
-                  <text value="&amp;Queue Name:"/>
+                  <labelFor value="cad58"/>
+                  <text value="Connection &amp;Factory Name:"/>
                 </properties>
               </component>
-              <component id="288fd" class="javax.swing.JTextField" binding="queueNameTextField">
+              <component id="cad58" class="javax.swing.JTextField" binding="qcfTextField">
                 <constraints>
                   <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -416,26 +399,43 @@
                 </constraints>
                 <properties/>
               </component>
+              <component id="18d6c" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <labelFor value="288fd"/>
+                  <text value="&amp;Destination Name:"/>
+                </properties>
+              </component>
+              <component id="288fd" class="javax.swing.JTextField" binding="queueNameTextField">
+                <constraints>
+                  <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
               <vspacer id="5a6d5">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                     <preferred-size width="-1" height="4"/>
                   </grid>
                 </constraints>
               </vspacer>
               <component id="fc73a" class="javax.swing.JCheckBox" binding="useQueueCredentialsCheckBox">
                 <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="6" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="138" height="22"/>
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="&amp;Credentials are required to connect to this Queue"/>
+                  <text value="&amp;Credentials are required to connect to this Destination"/>
                 </properties>
               </component>
               <grid id="a2b96" binding="queueExtraPropertiesOuterPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
                 <constraints>
-                  <grid row="8" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="10" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -443,36 +443,14 @@
               </grid>
               <component id="ecdef" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="User Name:"/>
-                </properties>
-              </component>
-              <component id="60255" class="javax.swing.JTextField" binding="queueUsernameTextField">
-                <constraints>
-                  <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
-              <component id="55141" class="javax.swing.JLabel">
-                <constraints>
                   <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Password:"/>
+                  <labelFor value="60255"/>
+                  <text value="&amp;User Name:"/>
                 </properties>
               </component>
-              <vspacer id="c0162">
-                <constraints>
-                  <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="4"/>
-                  </grid>
-                </constraints>
-              </vspacer>
-              <component id="67f6e" class="javax.swing.JPasswordField" binding="queuePasswordField">
+              <component id="60255" class="javax.swing.JTextField" binding="queueUsernameTextField">
                 <constraints>
                   <grid row="7" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -480,13 +458,58 @@
                 </constraints>
                 <properties/>
               </component>
-              <vspacer id="eacd9">
+              <component id="55141" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                  <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <labelFor value="67f6e"/>
+                  <text value="&amp;Password:"/>
+                </properties>
+              </component>
+              <vspacer id="c0162">
+                <constraints>
+                  <grid row="8" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                     <preferred-size width="-1" height="4"/>
                   </grid>
                 </constraints>
               </vspacer>
+              <component id="67f6e" class="javax.swing.JPasswordField" binding="queuePasswordField">
+                <constraints>
+                  <grid row="9" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <vspacer id="eacd9">
+                <constraints>
+                  <grid row="5" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                    <preferred-size width="-1" height="4"/>
+                  </grid>
+                </constraints>
+              </vspacer>
+              <component id="2720a" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Destnation &amp;Type:"/>
+                </properties>
+              </component>
+              <vspacer id="59685">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                    <preferred-size width="-1" height="4"/>
+                  </grid>
+                </constraints>
+              </vspacer>
+              <component id="ebf26" class="javax.swing.JComboBox" binding="destinationTypeComboBox">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
             </children>
           </grid>
           <grid id="29b97" binding="inboundOptionsPanel" layout-manager="GridLayoutManager" row-count="11" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -611,7 +634,7 @@
                   <grid row="9" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Stop &amp;listening on this queue"/>
+                  <text value="Stop &amp;listening on this destination"/>
                 </properties>
               </component>
               <grid id="dba60" binding="inboundCorrelationPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -753,8 +776,8 @@
                     </constraints>
                     <properties>
                       <actionCommand value="Associate queue with published service (bypass resolution)"/>
-                      <label value="Associate queue with published service (bypass resolution)"/>
-                      <text value="Associate queue with published service (bypass resolution)"/>
+                      <label value="Associate destination with published service (bypass resolution)"/>
+                      <text value="Associate destination with published service (bypass resolution)"/>
                     </properties>
                   </component>
                   <grid id="a0d42" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
