--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/GlobalResourceImportResultsStep.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/GlobalResourceImportResultsStep.form
@@ -118,7 +118,9 @@
               </component>
               <scrollpane id="70160">
                 <constraints>
-                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="32"/>
+                  </grid>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -131,7 +133,9 @@
               </scrollpane>
               <scrollpane id="85f35">
                 <constraints>
-                  <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="32"/>
+                  </grid>
                 </constraints>
                 <properties/>
                 <border type="none"/>
