SSM-2962: Fix for Global Resources: Document that Matches field in the filter frame requires regex
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27135 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/GlobalResourcesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/GlobalResourcesDialog.form
@@ -193,6 +193,7 @@
             <properties>
               <labelFor value="74c24"/>
               <text resource-bundle="com/l7tech/console/panels/GlobalResourcesDialog" key="label.matches"/>
+              <toolTipText resource-bundle="com/l7tech/console/panels/GlobalResourcesDialog" key="tooltip.matches"/>
             </properties>
           </component>
           <component id="1d015" class="javax.swing.JLabel">
