SSM-3055: fixed by making the dialog wider by default.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@27348 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/FtpRoutingAssertion/src/main/java/com/l7tech/external/assertions/ftprouting/console/resources/FtpRoutingPropertiesDialog.form
+++ b/modules/gateway/assertions/FtpRoutingAssertion/src/main/java/com/l7tech/external/assertions/ftprouting/console/resources/FtpRoutingPropertiesDialog.form
@@ -5,7 +5,10 @@
     <constraints>
       <xy x="26" y="23" width="830" height="572"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="800" height="572"/>
+      <preferredSize width="800" height="572"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="d9834" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
